--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,9 +17,6 @@ html {
 }
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
   line-height: 26px;
@@ -28,6 +25,15 @@ body {
   color: #333333;
   background-color: #F2F2F2;
   text-align: left;
+}
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 .main-container {
   flex-grow: 1;
@@ -51,16 +57,10 @@ body {
 }
 .page-header,
 .catalog-header {
-  width: 1200px;
-  margin: 0 auto;
-  background-color: #fff;
-}
-.page-header-wrap,
-.catalog-header-wrap {
   display: flex;
   justify-content: space-between;
-  width: 1060px;
-  margin: 0 auto;
+  gap: 20px;
+  padding: 0 70px;
 }
 .navigation-link,
 .user-navigation-link {
@@ -69,22 +69,27 @@ body {
   line-height: 24px;
   color: #000000;
   text-decoration: none;
+  padding: 20px 16px;
+  display: block;
+  box-sizing: border-box;
+}
+.user-navigation-link {
+  padding: 22px 12px;
 }
 .navigation-link-logo {
   width: 138px;
-  margin-right: 30px;
+  margin-right: 10px;
+}
+.navigation-link-img {
+  display: block;
 }
 .navigation-menu {
-  max-width: 350px;
+  min-width: 350px;
   margin-right: auto;
 }
 .navigation-list {
   display: flex;
   flex-wrap: wrap;
-}
-.navigation-item {
-  margin-right: 16px;
-  margin-left: 16px;
 }
 .user-navigation {
   display: flex;
@@ -93,12 +98,16 @@ body {
   min-width: 120px;
 }
 .user-navigation-link {
-  margin-right: 12px;
-  margin-left: 12px;
+  padding: 8px 34px;
+  display: block;
+  box-sizing: border-box;
 }
 .navigation-button {
-  width: 160px;
-  margin-left: 20px;
+  min-width: 160px;
+  min-height: 36px;
+  margin: 14px 0 14px 0;
+  border-radius: 4px;
+  cursor: pointer;
 }
 .number-of-favorite {
   font-size: 10px;
@@ -113,11 +122,7 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   background-color: #756157;
-}
-.page-container {
-  width: 1200px;
-  margin: 0 auto;
-  background-color: #fff;
+  cursor: pointer;
 }
 .hero {
   background-color: #7DB54F;
@@ -125,35 +130,41 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   color: inherit;
+  min-height: 485px;
 }
-.hero-img {
-  display: block;
-  margin: 0 auto;
+.hero-figure {
+  margin: 0;
+  padding: 51px 0 82px 0;
+  text-align: center;
 }
 .advantages,
 .services,
 .booking {
   text-align: center;
-}
-.advantages {
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
 }
-.advantages-wrap {
-  width: 651px;
-  margin: 0 auto;
+.advantages{
+  min-height: 1437px;
 }
-.advantages-title {
-  font-size: 30px;
-  line-height: 36px;
-  font-weight: 700;
-  color: #000000;
-  text-transform: uppercase;
+.services{
+  min-height: 631px;
+}
+.booking{
+  min-height: 406px;
+}
+.advantages-text {
+  margin: 0 auto 90px;
+}
+.services-text {
+  margin: 0 auto 69px;
 }
 .advantages-list {
   display: flex;
   flex-wrap: wrap;
 }
+.advantages-title,
 .services-title,
 .booking-title,
 .subscribe-title {
@@ -162,10 +173,20 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
+  max-width: 620px;
+  margin: 69px auto 25px;
 }
-.advantages-item {
+.advantages-item,
+.services-item  {
   background-color: #83B3D320;
   width: 400px;
+  min-height: 385px;
+}
+.services-item  {
+  background-color: #ffffff;
+  max-width: 400px;
+  padding: 183px 85px 81px 85px;
+  box-sizing: border-box;
 }
 .advantages-item-medium {
   width: 1200px;
@@ -175,11 +196,17 @@ body {
   background-color: #82B3D3;
   color: #ffffff;
 }
+.advantages-big {
+  width: 1200px;
+}
 .advantages-item-light {
   background-color: #83B3D312;
 }
 .advantages-reverse {
   flex-direction: row-reverse;
+}
+.advantages-item-wrap {
+  padding: 102px 85px;
 }
 .advantages-item-title,
 .services-item-title {
@@ -188,21 +215,18 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   color: inherit;
+  margin: 0 auto 62px;
+  max-width: 175px;
 }
-.services {
-  display: flex;
-  flex-direction: column;
-}
-.services-wrap {
-  max-width: 505px;
-  margin: 0 auto;
+.services-title {
+  margin-top: 64px;
 }
 .services-list {
   display: flex;
   flex-wrap: wrap;
 }
-.services-item {
-  width: 400px;
+.services-item-title {
+  margin: 0 auto 30px;
 }
 .item-light {
   background-color: #83B3D312;
@@ -211,15 +235,21 @@ body {
 .services-description {
   font-size: 18px;
   line-height: 21px;
+  padding: 0;
+  margin: 0;
 }
 .subscribe-title {
   color: #ffffff;
 }
-.booking-wrap {
-  display: flex;
-  flex-direction: column;
-  width: 590px;
-  margin: 0 auto;
+.booking-title,
+.subscribe-title {
+  margin-top: 96px;
+  margin-bottom: 20px;
+}
+.booking-text {
+  margin: 0;
+  margin-bottom: 54px;
+  min-width: 600px;
 }
 .booking-link {
   font-size: 20px;
@@ -229,6 +259,13 @@ body {
   color: #ffffff;
   background-color: #756157;
   text-decoration: none;
+  min-width: 375px;
+  margin: 0 auto;
+  margin-bottom: 96px;
+  display: block;
+  box-sizing: border-box;
+  padding: 8px 50px;
+  border-radius: 4px;
 }
 .subscribe {
   background-color: #82B3D3;
@@ -237,17 +274,32 @@ body {
   background-repeat: no-repeat;
   color: #ffffff;
   text-align: center;
-}
-.subscribe-wrap {
   display: flex;
   flex-direction: column;
-  width: 685px;
+  min-height: 414px;
+  padding: 50px;
+  box-sizing: border-box;
+}
+.subscribe-description {
+  max-width: 475px;
   margin: 0 auto;
+  margin-bottom: 54px;
+}
+.subscribe-form {
+  margin-bottom: 54px;
+  min-width: 684px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .subscribe-email {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 24px;
+}
+.subscribe-button {
+  min-width: 232px;
+  min-height: 52px;
 }
 .button {
   font-family: "PT Sans", sans-serif;
@@ -259,6 +311,23 @@ body {
   background-color: #82B3D3;
   border: none;
   text-decoration: none;
+  cursor: pointer;
+  max-width: 161px;
+  max-height: 36px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 26px;
+}
+.social-link {
+  border: none;
+  text-decoration: none;
+  display: block;
+  box-sizing: border-box;
+  padding: 13px 12px;
+  min-width: 47px;
+  min-height: 40px;
 }
 .contact-phone {
   font-size: 40px;
@@ -270,18 +339,15 @@ body {
   text-decoration: none;
 }
 .page-footer {
-  width: 1200px;
-  margin: 0 auto;
   background-color: #fff;
-}
-.page-footer-wrap {
   display: flex;
   justify-content: space-between;
-  width: 1060px;
-  margin: 0 auto;
+  padding: 40px 70px 30px;
+  min-height: 120px;
+  box-sizing: border-box;
 }
 .social-list {
-  width: 145px;
+  min-width: 145px;
   margin-right: auto;
   display: flex;
   flex-wrap: wrap;
@@ -302,16 +368,15 @@ body {
   background-repeat: no-repeat;
   color: #ffffff;
   text-align: left;
+  padding: 35px 70px 70px;
+  min-height: 412px;
+  box-sizing: border-box;
 }
-.page-header-wrap
 .catalog-header-title {
   font-size: 60px;
   line-height: 78px;
   font-weight: 700;
-}
-.main-catalog-header-wrap {
-  width: 1060px;
-  margin: 0 auto;
+  margin: 0 auto 8px 0;
 }
 .catalog-filter-group {
   min-width: 150px;
@@ -319,6 +384,8 @@ body {
 .breadcrumbs-list {
   display: flex;
   flex-wrap: wrap;
+  gap: 10px;
+  margin: 0 auto 40px 0;
 }
 .breadcrumbs-item {
   min-width: 15px;
@@ -326,11 +393,19 @@ body {
 .breadcrumbs-link {
   font-size: 16px;
   line-height: 21px;
+  min-width: 15px;
+  min-height: 15px;
+  padding: 3px;
+  display: block;
+  box-sizing: border-box;
 }
 .catalog-filter-title {
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
+}
+.catalog-products {
+  margin: 0;
 }
 .catalog-filter {
   display: flex;
@@ -354,6 +429,7 @@ body {
   color: #ffffff;
   border: none;
   text-transform: uppercase;
+  cursor: pointer;
 }
 .control-input {
   font-family: "PT Sans", sans-serif;
@@ -362,9 +438,11 @@ body {
 }
 .active-filter-button {
   background-color: #82B3D3;
+  min-width: 191px;
 }
 .filter-button-reset {
   background-color: transparent;
+  min-width: 191px;
 }
 .catalog-title {
   font-size: 30px;
@@ -372,6 +450,7 @@ body {
   text-transform: uppercase;
   color: #000000;
   text-align: left;
+  margin: 56px 0 46px 0;
 }
 .option-value,
 .select-control {
@@ -384,10 +463,14 @@ body {
 .catalog-buttons-wrap {
   display: flex;
   flex-direction: column;
+  margin-top: 56px;
+  gap: 32px;
 }
-.catalog-wrap {
-  width: 1060px;
-  margin: 0 auto;
+.catalog {
+  background-color: #ffffff;
+  padding: 0 70px 50px 70px;
+  box-sizing: border-box;
+  min-height: 1235px;
 }
 .catalog-title-wrap {
   display: flex;
@@ -397,39 +480,87 @@ body {
 .catalog-view-list {
   width: 160px;
   margin-left: 70px;
+  margin-top: 50px;
+  margin-bottom: 40px;
+  display: flex;
+  gap: 8px;
+}
+.catalog-view-link {
+  width: 48px;
+  height: 48px;
+  display: block;
+  box-sizing: border-box;
+  padding: 16px 17px;
+  border-radius: 4px;
+  border: 2px solid #E6E6E6;
 }
 .select-control{
   width: 295px;
   margin-left: auto;
+  margin-top: 50px;
+  margin-bottom: 40px;
 }
 .hotel-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 17px;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-bottom: 80px;
 }
 .hotel-card {
   background-color: #fff;
-  width: 340px;
-  border: 1px solid #E6E6E6;
+  max-width: 340px;
+  box-shadow: 0 0 0 1px #E6E6E6;
+  border-radius: 4px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 .hotel-card-link{
   color: #000000;
   text-decoration: none;
   text-align: left;
+  display: block;
+  box-sizing: border-box;
+  min-width: 300px;
+  min-height: 212px;
 }
 .hotel-card-title {
+  margin: 0;
+}
+.hotel-card-image {
+  display: block;
+}
+.hotel-card-title-link {
   font-size: 24px;
   line-height: 28px;
+  color: #000000;
+  text-decoration: none;
+  text-align: left;
+  display: block;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+.card-price-wrapper,
+.hotel-button-wrapper,
+.rating-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .hotel-card-description,
 .hotel-card-price {
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
+  padding: 0;
+  margin: 0;
 }
 .hotel-more-button {
   background-color: #756157;
+  cursor: pointer;
 }
 .favorite-select {
   background-color: #7DB54F;
@@ -438,23 +569,20 @@ body {
   font-size: 16px;
   line-height: 20px;
   background-color: #F2F2F2;
-  text-transform: uppercase;
-}
-.subscribe-catalog-title {
-  font-size: 30px;
-  line-height: 36px;
-  font-weight: 700;
-  color: #000000;
+  color: #333333;
+  font-weight: 400;
   text-transform: uppercase;
 }
 .pagination {
-  background-color: #ffffff;
   display: flex;
   flex-wrap: wrap;
+  align-items: baseline;
+  gap: 8px;
+  margin-right: auto;
 }
 .pagination-item {
-  width: 60px;
-  margin-right: 8px;
+  min-width: 60px;
+  min-height: 60px;
 }
 .pagination-link {
   color: #ffffff;
@@ -463,6 +591,14 @@ body {
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
+  box-sizing: border-box;
+  padding: 10px 12px;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
 }
 .pagination-link-current {
   color: #000000;
@@ -473,12 +609,29 @@ body {
   line-height: 26px;
   background-color: #ffffff;
   color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
 }
 .subscribe-catalog {
   background-image: none;
   background-color: #ffffff;
   color: #000000;
 }
+.subscribe-catalog-title {
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+  margin-top: 46px;
+  margin-bottom: 20px;
+}
 .subscribe-catalog-description {
   color: #333333;
+  margin: 0 auto 54px;
+  max-width: 475px;
 }
