--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,11 @@ body {
   background-color: #F2F2F2;
   text-align: left;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -71,14 +76,48 @@ body {
   text-decoration: none;
   padding: 20px 16px;
   display: block;
-  box-sizing: border-box;
+  transition: all 0.3s;
 }
-.user-navigation-link {
-  padding: 22px 12px;
+.navigation-link:hover,
+.navigation-link:active,
+.navigation-link-current {
+  text-decoration: underline;
+  text-decoration-color: #756257;
+  text-decoration-thickness: 2px;
+  text-underline-position: under;
+  text-underline-offset: 18px;
+}
+.navigation-link:not(.navigation-link-current):hover {
+  color: #756257;
+}
+.user-navigation-link:not(.navigation-button):hover {
+  opacity: 0.3;
+}
+.search-link {
+  width: 44px;
+  height: 64px;
+  margin: 0;
+  cursor: pointer;
+  background-image: url("../images/search.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.favorite-list {
+  width: 44px;
+  height: 64px;
+  margin: 0;
+  cursor: pointer;
+  background-image: url("../images/heart.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .navigation-link-logo {
   width: 138px;
   margin-right: 10px;
+  transition: all 0.3s;
+}
+.navigation-link-logo:hover {
+  opacity: 0.6;
 }
 .navigation-link-img {
   display: block;
@@ -94,20 +133,44 @@ body {
 .user-navigation {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-end;
   min-width: 120px;
 }
 .user-navigation-link {
-  padding: 8px 34px;
+  padding: 8px 24px;
   display: block;
-  box-sizing: border-box;
 }
 .navigation-button {
   min-width: 160px;
   min-height: 36px;
-  margin: 14px 0 14px 0;
+  margin: 14px 0;
   border-radius: 4px;
+  border: none;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #756157;
   cursor: pointer;
+  transition: all 0.3s;
+}
+/* коричневые кнопки */
+.navigation-button:hover,
+.navigation-button:focus,
+.booking-link:hover,
+.booking-link:focus {
+  background-color: #615048;
+  outline: none;
+}
+.navigation-button:active,
+.booking-link:active {
+  background-color: #756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+.navigation-button.disabled,
+.booking-link.disabled {
+  background-color: #E5E5E5;
 }
 .number-of-favorite {
   font-size: 10px;
@@ -115,20 +178,20 @@ body {
   color: #ffffff;
   background-color: #7DB54F;
   font-weight: 400;
-}
-.navigation-button {
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
-  color: #ffffff;
-  background-color: #756157;
-  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
 }
 .hero {
   background-color: #7DB54F;
-  background-image: url(../images/index-background.jpg);
-  background-size: cover;
+  background-image: url("../images/divider.svg"),
+  url("../images/index-background.jpg");
+  background-size: 1200px 57px, cover;
   background-repeat: no-repeat;
+  background-position: bottom center;
   color: inherit;
   min-height: 485px;
 }
@@ -145,20 +208,25 @@ body {
   display: flex;
   flex-direction: column;
 }
-.advantages{
+.advantages {
   min-height: 1437px;
+  padding: 69px 0 0;
 }
-.services{
+.services {
   min-height: 631px;
+  padding: 64px 0 0;
 }
-.booking{
+.booking {
   min-height: 406px;
+  padding: 96px 0;
 }
 .advantages-text {
   margin: 0 auto 90px;
+  padding: 0 20px;
 }
 .services-text {
-  margin: 0 auto 69px;
+  margin: 0 auto 64px;
+  padding: 0 20px;
 }
 .advantages-list {
   display: flex;
@@ -173,20 +241,35 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
-  max-width: 620px;
-  margin: 69px auto 25px;
+  max-width: 660px;
+  margin: 0 auto 25px;
+  padding: 0 20px;
 }
 .advantages-item,
-.services-item  {
+.services-item {
   background-color: #83B3D320;
   width: 400px;
   min-height: 385px;
 }
-.services-item  {
+.services-item {
   background-color: #ffffff;
   max-width: 400px;
-  padding: 183px 85px 81px 85px;
-  box-sizing: border-box;
+  padding: 183px 65px 81px 65px;
+}
+.services-item.house {
+  background-image: url(../images/house-icon.svg);
+  background-repeat: no-repeat;
+  background-position: top 80px center;
+}
+.services-item.food {
+  background-image: url(../images/food-icon.svg);
+  background-repeat: no-repeat;
+  background-position: top 80px center;
+}
+.services-item.souvenir {
+  background-image: url(../images/box-icon.svg);
+  background-repeat: no-repeat;
+  background-position: top 80px center;
 }
 .advantages-item-medium {
   width: 1200px;
@@ -204,9 +287,10 @@ body {
 }
 .advantages-reverse {
   flex-direction: row-reverse;
+  justify-content: space-between;
 }
 .advantages-item-wrap {
-  padding: 102px 85px;
+  padding: 102px 45px;
 }
 .advantages-item-title,
 .services-item-title {
@@ -216,10 +300,25 @@ body {
   font-weight: 700;
   color: inherit;
   margin: 0 auto 62px;
-  max-width: 175px;
+  padding: 0 20px;
+  max-width: 212px;
+  position: relative;
+}
+.advantages-item-title::before {
+  position: absolute;
+  top: calc(100% + 30px);
+  left: 50%;
+  transform: translate(-50%);
+  content: "";
+  width: 60px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.advantages-big .advantages-item-title::before {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .services-title {
-  margin-top: 64px;
+  margin: 0 auto 20px;
 }
 .services-list {
   display: flex;
@@ -235,7 +334,7 @@ body {
 .services-description {
   font-size: 18px;
   line-height: 21px;
-  padding: 0;
+  padding: 0 20px;
   margin: 0;
 }
 .subscribe-title {
@@ -243,12 +342,11 @@ body {
 }
 .booking-title,
 .subscribe-title {
-  margin-top: 96px;
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
 }
 .booking-text {
-  margin: 0;
-  margin-bottom: 54px;
+  margin: 0 auto 54px;
+  padding: 0 20px;
   min-width: 600px;
 }
 .booking-link {
@@ -260,12 +358,12 @@ body {
   background-color: #756157;
   text-decoration: none;
   min-width: 375px;
+  min-height: 52px;
   margin: 0 auto;
-  margin-bottom: 96px;
   display: block;
-  box-sizing: border-box;
   padding: 8px 50px;
   border-radius: 4px;
+  border: none;
 }
 .subscribe {
   background-color: #82B3D3;
@@ -277,16 +375,15 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 414px;
-  padding: 50px;
-  box-sizing: border-box;
+  padding: 96px 50px 104px;
 }
 .subscribe-description {
-  max-width: 475px;
-  margin: 0 auto;
-  margin-bottom: 54px;
+  max-width: 510px;
+  margin: 0 auto 54px;
+  padding: 0 20px;
 }
 .subscribe-form {
-  margin-bottom: 54px;
+  margin: 0 auto;
   min-width: 684px;
   display: flex;
   align-items: center;
@@ -313,21 +410,50 @@ body {
   text-decoration: none;
   cursor: pointer;
   max-width: 161px;
-  max-height: 36px;
+  min-height: 36px;
   border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 8px 26px;
+  transition: all 0.3s;
+}
+/* голубая кнопка */
+.button:hover,
+.button:focus {
+  background-color: #68A2CA;
+  outline: none;
+}
+.button:active {
+  background-color: #82B3D3;
+  color: rgba(255, 255, 255, 0.3);
 }
 .social-link {
   border: none;
   text-decoration: none;
   display: block;
-  box-sizing: border-box;
   padding: 13px 12px;
   min-width: 47px;
   min-height: 40px;
+  transition: all 0.3s;
+  position: relative;
+}
+.social-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  fill: #83B3D3;
+  transition: all 0.3s;
+}
+.social-link:hover .social-icon,
+.social-link:focus .social-icon {
+  fill: #68A2CA;
+}
+.social-link:active .social-icon {
+  fill: rgba(104, 162, 202, 0.3);
 }
 .contact-phone {
   font-size: 40px;
@@ -337,6 +463,14 @@ body {
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
+  transition: all 0.3s;
+}
+.contact-phone:hover,
+.contact-phone:focus {
+  color: #756157;
+}
+.contact-phone:active {
+  color: rgba(117, 97, 87, 0.3);
 }
 .page-footer {
   background-color: #fff;
@@ -344,7 +478,6 @@ body {
   justify-content: space-between;
   padding: 40px 70px 30px;
   min-height: 120px;
-  box-sizing: border-box;
 }
 .social-list {
   min-width: 145px;
@@ -355,6 +488,18 @@ body {
 .developer-link {
   width: 115px;
   margin-left: auto;
+  transition: all 0.3s;
+}
+.developer-icon {
+  fill: #000000;
+  transition: all 0.3s;
+}
+.developer-link:hover .developer-icon,
+.developer-link:active .developer-icon {
+  fill: #756157;
+}
+.developer-link:active .developer-icon {
+  fill: rgba(117, 97, 87, 0.3);
 }
 .main-catalog-container {
   width: 1200px;
@@ -370,7 +515,6 @@ body {
   text-align: left;
   padding: 35px 70px 70px;
   min-height: 412px;
-  box-sizing: border-box;
 }
 .catalog-header-title {
   font-size: 60px;
@@ -384,11 +528,22 @@ body {
 .breadcrumbs-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
   margin: 0 auto 40px 0;
 }
 .breadcrumbs-item {
   min-width: 15px;
+  position: relative;
+}
+.breadcrumbs-item:not(:last-child)::before {
+  content: '';
+  display: block;
+  width: 7px;
+  height: 20px;
+  background-image: url(../images/arrow-breadcrums.svg);
+  position: absolute;
+  left: 25px;
+  top: 5px;
 }
 .breadcrumbs-link {
   font-size: 16px;
@@ -396,8 +551,17 @@ body {
   min-width: 15px;
   min-height: 15px;
   padding: 3px;
-  display: block;
-  box-sizing: border-box;
+  display: inline-block;
+  transition: all 0.3s;
+}
+.breadcrumbs-link:not(.current-link):hover {
+  opacity: 0.6;
+}
+.breadcrumbs-link:not(.current-link):focus {
+  opacity: 1;
+}
+.breadcrumbs-link:not(.current-link):active {
+  opacity: 0.3;
 }
 .catalog-filter-title {
   font-size: 20px;
@@ -415,7 +579,7 @@ body {
   font-size: 18px;
   line-height: 23px;
 }
-.control{
+.control {
   font-size: 18px;
   line-height: 24px;
   color: #00000030;
@@ -439,10 +603,21 @@ body {
 .active-filter-button {
   background-color: #82B3D3;
   min-width: 191px;
+  min-height: 36px;
 }
 .filter-button-reset {
   background-color: transparent;
   min-width: 191px;
+  min-height: 36px;
+  transition: all 0.5s;
+}
+.filter-button-reset:hover {
+  color: rgba(255, 255, 255, 0.6);
+  background-color: inherit;
+}
+.filter-button-reset:focus {
+  box-shadow: 0 0 0 3px #83B3D3;
+  background-color: inherit;
 }
 .catalog-title {
   font-size: 30px;
@@ -450,7 +625,7 @@ body {
   text-transform: uppercase;
   color: #000000;
   text-align: left;
-  margin: 56px 0 46px 0;
+  margin: 0;
 }
 .option-value,
 .select-control {
@@ -469,41 +644,64 @@ body {
 .catalog {
   background-color: #ffffff;
   padding: 0 70px 50px 70px;
-  box-sizing: border-box;
   min-height: 1235px;
 }
 .catalog-title-wrap {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 50px 0 40px;
 }
 .catalog-view-list {
   width: 160px;
-  margin-left: 70px;
-  margin-top: 50px;
-  margin-bottom: 40px;
+  margin: 0 0 0 70px;
   display: flex;
   gap: 8px;
 }
 .catalog-view-link {
-  width: 48px;
-  height: 48px;
+  min-width: 48px;
+  min-height: 48px;
   display: block;
-  box-sizing: border-box;
   padding: 16px 17px;
   border-radius: 4px;
   border: 2px solid #E6E6E6;
+  transition: all 0.3s;
 }
-.select-control{
+.catalog-view-link:hover,
+.catalog-view-link:active {
+  border-color: #000000;
+}
+.catalog-view-link:focus {
+  border-color: #68A2CA;
+}
+.catalog-view-link.grid-view {
+  width: 48px;
+  height: 48px;
+  background-image: url('../images/grid.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.catalog-view-link.cards-view {
+  width: 48px;
+  height: 48px;
+  background-image: url('../images/cards.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.catalog-view-link.list-view {
+  width: 48px;
+  height: 48px;
+  background-image: url('../images/list.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.select-control {
   width: 295px;
-  margin-left: auto;
-  margin-top: 50px;
-  margin-bottom: 40px;
+  margin: 0 0 0 auto;
 }
 .hotel-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   margin-bottom: 80px;
 }
@@ -513,24 +711,26 @@ body {
   box-shadow: 0 0 0 1px #E6E6E6;
   border-radius: 4px;
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
+  display: grid;
+  grid-template-columns: repeat(2, 140px);
+  gap: 16px 20px;
 }
-.hotel-card-link{
+.hotel-card-link {
   color: #000000;
   text-decoration: none;
   text-align: left;
   display: block;
-  box-sizing: border-box;
+  grid-column: 1 / -1;
   min-width: 300px;
   min-height: 212px;
 }
 .hotel-card-title {
   margin: 0;
+  grid-column: 1 / -1;
 }
 .hotel-card-image {
   display: block;
+  object-fit: contain;
 }
 .hotel-card-title-link {
   font-size: 24px;
@@ -539,7 +739,6 @@ body {
   text-decoration: none;
   text-align: left;
   display: block;
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
@@ -549,6 +748,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  grid-column: 1 / -1;
 }
 .hotel-card-description,
 .hotel-card-price {
@@ -560,10 +760,15 @@ body {
 }
 .hotel-more-button {
   background-color: #756157;
-  cursor: pointer;
 }
 .favorite-select {
   background-color: #7DB54F;
+  transition: all 0.3s;
+}
+.favorite-select:hover,
+.favorite-select:focus {
+  background-color: #6C9E42;
+  outline: none;
 }
 .hotel-rating {
   font-size: 16px;
@@ -572,6 +777,15 @@ body {
   color: #333333;
   font-weight: 400;
   text-transform: uppercase;
+  margin: 0;
+}
+.hotel-rating.button:hover {
+  color: inherit;
+  background-color: #F2F2F2;
+}
+.stars {
+  margin: 0;
+  padding: 0;
 }
 .pagination {
   display: flex;
@@ -591,16 +805,27 @@ body {
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
-  box-sizing: border-box;
   padding: 10px 12px;
   display: flex;
   width: 100%;
   height: 100%;
+  min-height: 60px;
   align-items: center;
   justify-content: center;
   border-radius: 4px;
+  transition: all 0.3s;
 }
-.pagination-link-current {
+.pagination-link:hover,
+.pagination-link:focus  {
+  background-color: #68A2CA;
+}
+.pagination-link:active  {
+  background-color: #82B3D3;
+  color: rgba(255, 255, 255, 0.3);
+}
+.pagination-link-current,
+.pagination-link-current:hover,
+.pagination-link-current:active {
   color: #000000;
   background-color: #F2F2F2;
 }
@@ -614,7 +839,12 @@ body {
   justify-content: center;
   width: 100%;
   height: 100%;
+  min-height: 60px;
   text-decoration: none;
+  transition: all 0.3s;
+}
+.pagination-more:hover {
+  opacity: 0.6;
 }
 .subscribe-catalog {
   background-image: none;
@@ -627,11 +857,12 @@ body {
   font-weight: 700;
   color: #000000;
   text-transform: uppercase;
-  margin-top: 46px;
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
+  padding: 0 20px;
 }
 .subscribe-catalog-description {
   color: #333333;
   margin: 0 auto 54px;
-  max-width: 475px;
+  max-width: 510px;
+  padding: 0 20px;
 }
